# Lucy_verse_ai_os

./: App.tsx  DOCKER_SETUP.md  Dockerfile  Dockerfile.template  Makefile  QUICK_REFERENCE.md  README.md  SETUP.md  START_LUCY.bat  START_LUCY.sh  TROUBLESHOOTING.md  ameCOGNITIVE RUNTIME EXHAUSTI.txt  check_status.bat  civilunrestSYSTEM AUDIT REPORT.txt  cleanup_lucy.bat  cognition_loop.py  custom.d.ts  debug_lucy.bat  debug_lucy.sh  docker-compose.extra.yml  docker-compose.infrastructure.yml  docker-compose.toolbelt.yml  docker-compose.ui.yml  docker-compose.yml  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  index.css  index.html  lucy's structure page doc.md  lucy_core.py  lucyverse_memory.db-shm  lucyverse_memory.db-wal  metadata.json  openapi_emma.json  package-lock.json  package.json  policy.json  prometheus.yml  pytest.ini  (+13 more)
Lucy''s_ai_ytrainer/: agent.py
aegis/: package.json
ai_dj/: README.md  radio.liq
ame.lucy's engine/: README.md  metadata.json  package-lock.json  package.json
archivist/: main.py  pyproject.toml
armed_forces/: manifest.json
boot_sentinel/: boot_sentinel.py
capability_manager/: Dockerfile  guard.py  main.py
chain_of_trust/: trust_chain.py
cognition_loop/: package.json
compilers/: README.md
components/: LucyVerseDesktop.tsx  SovereignOSApps.tsx  TerminalWindow.tsx  designTokens.css
core/: event_bus.py
data/: capabilities.json  lucy.db  scheduler.db  self_extension.db
datavault/vault_api/: main.py  pyproject.toml
safeguard/policy_engine/: README.md  main.py  policy.json  pyproject.toml
(+345 files in other folders)
