[project]
name = "lucy-policy_engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "prometheus-client",
    "aiosqlite",
    "psutil",
    "redis"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
